[gd_scene load_steps=20 format=2]

[ext_resource path="res://other/long_shot/Long_Shot.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/PauseDialog.gd" type="Script" id=2]
[ext_resource path="res://images/normal.png" type="Texture" id=3]
[ext_resource path="res://images/pressed.png" type="Texture" id=4]
[ext_resource path="res://images/hover.png" type="Texture" id=5]
[ext_resource path="res://images/disabled.png" type="Texture" id=6]
[ext_resource path="res://images/focused.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
	//COLOR = texture(TEXTURE, UV);
	COLOR.b = 0.25;
	COLOR.r = 0.0;
	COLOR.y = 0.0;
}

//void vertex(){
//	VERTEX += vec2(cos(TIME)*100.0, sin(TIME)*100.0);
//}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[node name="PauseDialog" type="PopupDialog"]
pause_mode = 2
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 230.0
margin_bottom = 303.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = SubResource( 4 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
margin_bottom = 16.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 312.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "SETTINGS"
align = 1

[node name="Music" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 150.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 6 )
toggle_mode = true
text = "MUSIC"

[node name="MusicHSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 150.0
margin_bottom = 102.0
max_value = 50.0
ticks_on_borders = true

[node name="Sound" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 150.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "SOUND"

[node name="SoundHSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 150.0
margin_bottom = 166.0
max_value = 50.0
ticks_on_borders = true

[node name="ControlOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 150.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 8 )
text = "MOUSE"
align = 1
items = [ "MOUSE", null, false, 0, null, "WASD", null, false, 1, null, "ARROWS", null, false, 2, null ]
selected = 0

[node name="GraphicsOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 214.0
margin_right = 150.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 9 )
text = "LOW"
align = 1
items = [ "LOW", null, false, 0, null, "MEDIUM", null, false, 1, null, "HIGH", null, false, 2, null ]
selected = 0

[node name="DifficultyOptions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 150.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 10 )
text = "EASY"
align = 1
items = [ "EASY", null, false, 0, null, "NORMAL", null, false, 1, null, "HARD", null, false, 2, null ]
selected = 0

[node name="QuitToMainButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 244.0
margin_right = 150.0
margin_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 7 )
stretch_mode = 3
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuitToMainButton"]
margin_top = 1.79242
margin_right = 127.0
margin_bottom = 65.7924
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BACK TO
MENU"
align = 1
valign = 1
clip_text = true

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 150.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 12 )
text = "BACK TO MENU"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SoundHSlider" to="." method="_on_SoundHSlider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ControlOptions" to="." method="_on_ControlOptions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GraphicsOptions" to="." method="_on_GraphicsOptions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/DifficultyOptions" to="." method="_on_DifficultyOptions_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitToMainButton" to="." method="_on_QuitToMainButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
